# Gladiator

./: .gitignore  README.md  export_bot.py  gladiator_api.py  gladiator_nn.db-journal  gladiator_tui.py  install.py  main.py  main_mini.py  main_mini_parallel.py  main_nn.py  main_nn_mini.py  main_nn_mini_parallel.py  main_nn_parallel.py  main_parallel.py  requirements.txt  test_run.py  uci.py  uci_nn.py  uci_standalone_cpu_streak27_w1.py  uci_standalone_cpu_streak27_w2.py  uci_standalone_nn_w0.py  uci_streak_cpu_w1.py  uci_streak_cpu_w2.py  uci_streak_nn_w0.py
.github/workflows/: build.yml  release.yml
exported_bots/: uci_cpu_streak27_981432a4.py
gladiator/bot/: bot.py  evaluator.py  params.py  search.py  transposition.py
gladiator/storage/: db.py
gladiator/training/: match.py  trainer.py
gladiator/ui/: dashboard.py
gladiator_mini/bot/: bot.py  evaluator.py  params.py  search.py  tables.py
gladiator_mini/storage/: db.py
gladiator_mini/training/: match.py  trainer.py
gladiator_mini/ui/: dashboard.py
gladiator_nn/bot/: bot.py  network.py
gladiator_nn/storage/: db.py
gladiator_nn/training/: match.py  search.py  trainer.py
gladiator_nn/ui/: dashboard.py
gladiator_nn_mini/bot/: bot.py  network.py
gladiator_nn_mini/storage/: db.py
gladiator_nn_mini/training/: match.py  search.py  trainer.py
gladiator_nn_mini/ui/: dashboard.py
gui/src/: app.js  index.html  styles.css
gui/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
gui/src-tauri/src/: lib.rs  main.rs
scripts/: build-windows.sh  release-body.md  release.sh
